--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,6 +4,13 @@
 
 <h1> Pragmaticカタログ</h1>
 
+
+<%= Cart.find(session[:cart_id]).id %> 
+<!-- <%= li = LineItem.where(:cart_id => 15) %> -->
+
+<%= li = LineItem.find(2).product.title %>
+<%= "カートの中の商品の数は #{Cart.find(15).line_items.count}個です。" %>
+
 <% @products.each do |product| %>
 	<div class="entry">
       <%= image_tag(product.image_url) %>
@@ -11,6 +18,7 @@
 	  <%= sanitize(product.description) %>
 	  <div class="price_line">
 	    <span class="price"><%= number_to_currency(product.price) %></span>	
+	    <%= button_to 'カートに入れる', line_items_path(product_id: product) %>
 	  </div>
 	</div>
 <% end %>
