--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,9 +2,22 @@
 <p id="notice"><%= notice %></p>
 <% end %>
 
-<h2>Your Pragmatic Cart</h2>
-<ul>
-	<% @cart.line_items.each do |item| %>
-	  <li><%= item.product.title %></li>
-    <% end %>
-</ul>
+<h2>カート</h2>
+<div class="cart_title">カート</div>
+<table>
+  <% @cart.line_items.each do |item| %>
+    <tr>
+      <td><%= item.quantity %>&times;</td>
+      <td><%= item.product.title %></td>
+      <td class="item_price"><%= number_to_currency(item.total_price) %></td>
+    </tr>	
+  <% end %>
+
+  <tr class="totale_line">
+  	<td colspan="2">合計</td>
+  	<td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
+  </tr>
+
+</table> 
+
+<%= button_to 'カートを空にする', @cart,method: :delete,confirm: '本当によいですか？' %>
