'商品の追加ボタン押下後、サイドバーに反映されるように実装した'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
   </div>
   <div id="columns">
   	<div id="side">
-  		<ul>
+      <div id="cart">
+        <%= render @cart %>  
+      </div>
+  	
+    	<ul>
   		  <li><a href="">ホーム</a></li>
   		  <li><a href="">よくある質問</a></li>
   		  <li><a href="">ニュース</a></li>
